# NiuMa

./: .gitignore  fix.py  ssh_run.py
.github/workflows/: deploy.yml  game-server-deploy.yml  web-server-deploy.yml  web-ui-deploy.yml
.pnpm-store/v10/index/00/: 2526dcbd3f8e2653a9fcd13371e2f50f1e66a77a20adfb98c58f2f3f4f2719-css-what@3.4.2.json  5debecfe5d5b12fc331c884d132539140d68e036224005693af893b054ba68-compressible@2.0.18.json  a71d4e71525804dde7f1823d1c6bd82870209f3909ecab1328d11e52b1439e-cache-base@1.0.1.json  aa5a6251e7f2de1255b3870b2f9be7e28a82f478bebb03f2f6efadb890269b-base64-js@1.5.1.json  bccd3e9c8dabd02a5cc0637b29888c50c0900147d3a987247fdc4811c0814d-path-dirname@1.0.2.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.pnpm-store/v10/index/01/: 4466e5fd236043b27418fb550955bc3ae378582d8437441791f574ffba98da-safe-array-concat@1.1.3.json  56f0dd42767bd6eaeb8bd2692f409b47e37b53daf296c6a934ec9977da2223-path-is-absolute@1.0.1.json  7dd9c3988faee37989eeb119120382a913f9986746564c2cc1c0b3cb60ee74-yargs@13.3.2.json  d997eb153374d012b30b05b66c12b7b563f29a3d22ea979b4517cfb40a3ee1-cosmiconfig@7.1.0.json
.trae/specs/verify-server-startup/: checklist.md  spec.md  tasks.md
deploy/: docker-compose.yml
server/: CMakeLists.txt  README.MD
server/Framework/: CMakeLists.txt
server/Poker/: NiuNiuRule.cpp  NiuNiuRule.h  PokerDealer.cpp  PokerDealer.h
server/Server/: CMakeLists.txt  main.cpp  server.ini
server/Server/GrabNiuNiu/: GrabNiuNiuAvatar.cpp  GrabNiuNiuAvatar.h  GrabNiuNiuLoader.cpp  GrabNiuNiuLoader.h  GrabNiuNiuMessages.cpp  GrabNiuNiuMessages.h  GrabNiuNiuRoom.cpp  GrabNiuNiuRoom.cpp.bak  GrabNiuNiuRoom.cpp.bak2  GrabNiuNiuRoom.h  GrabNiuNiuRoom.h.bak  GrabNiuNiuRoomHandler.cpp  GrabNiuNiuRoomHandler.h
server/Server/NiuNiu100/: NiuNiu100Room.cpp
server/cmake/: Findmysql-concpp.cmake
specs/: 产品概述_暗涌牛盟.md  技术架构_暗涌牛盟.md
specs/features/: vue_game_client.md  vue_game_client_task_planning.md  vue_game_client_tech_design.md  暗涌牛盟_任务规划.md  看牌抢庄牛牛_任务规划.md  看牌抢庄牛牛_技术方案.md
web-ui/: README.md  package.json
web-ui/src/api/: gameClient.js
web-ui/src/router/: index.js
web-ui/src/utils/: gameSocket.js
(+1361 files in other folders)
